--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -705,7 +705,6 @@ graphing:
   defs:
     thunder-gradient: "linear-gradient(0 #ABFFFC 10% #3F8DFB 80% #3F8DFB 100% #ABFFFC)"
     sphere-gradient: "radial-gradient(at 41% 41%, 0% #CC85FB 100% #623D93)"
-    tower-gradient: "radial-gradient(82% #d9d9d966 82% #1a1a1a)"
   elements:
     arena:
       type: image
@@ -763,12 +762,6 @@ graphing:
       size: 8
       color: "url(#sphere-gradient)"
       opacity: 0.65
-    tower:
-      type: ellipse
-      size: 25
-      color: "url(#tower-gradient)"
-      opacity: 0.7
-      scale: 0
     shock:
       type: ellipse
       size: 40
@@ -968,9 +961,9 @@ graphing:
         R1: [77, -52]
         boss: { opacity: 0 }
       # turn 1
-      - boss: { pos: [60, 45], rotate: 45, opacity: 0.5 }
+      - boss: { x: 60, y: 45, rotate: 45, opacity: 0.5 }
         T2: { status: [jump] }
-      - orb#ne: { pos: [80, -135], opacity: 0 }
+      - orb#ne: { x: 80, y: -135, opacity: 0 }
         shock#sw: { scale: 1 }
         T2: [80, -45]
         T1: [68, -90]
@@ -994,9 +987,9 @@ graphing:
         T1: [68, -135]
         R1: [77, -135]
       # turn 2
-      - boss: { pos: [60, -45], rotate: -45, opacity: 0.5 }
+      - boss: { x: 60, y: -45, rotate: -45, opacity: 0.5 }
         R1: { status: [jump] }
-      - orb#nw: { pos: [80, 135], opacity: 0 }
+      - orb#nw: { x: 80, y: 135, opacity: 0 }
         shock#se: { scale: 1 }
         R1: [80, -135]
         T1: [68, 180]
@@ -1019,9 +1012,9 @@ graphing:
         R2: [85, 0]
         T1: [80, 135]
       # turn 3
-      - boss: { pos: [60, -135], rotate: -135, opacity: 0.5 }
+      - boss: { x: 60, y: -135, rotate: -135, opacity: 0.5 }
         T1: { status: [jump] }
-      - orb#sw: { pos: [80, 45], opacity: 0 }
+      - orb#sw: { x: 80, y: 45, opacity: 0 }
         shock#ne: { scale: 1 }
       - boss: [65, 0, -165]
         pyre#n: { scale: 0.6 }
@@ -1042,8 +1035,8 @@ graphing:
         R2: [38, -40]
         H2: [85, -90]
       # turn 4
-      - boss: { pos: [60, 135], rotate: 135, opacity: 0.5 }
-      - orb#se: { pos: [80, -45], opacity: 0 }
+      - boss: { x: 60, y: 135, rotate: 135, opacity: 0.5 }
+      - orb#se: { x: 80, y: -45, opacity: 0 }
         shock#nw: { scale: 1 }
       - boss: [65, -90, 105]
         pyre#w: { scale: 0.6 }
@@ -1055,7 +1048,7 @@ graphing:
       - tower#nw: { opacity: 0 }
         icemeld#se: { opacity: 0 }
         pyre#w: { opacity: 0 }
-        boss: { pos: [0, 0], rotate: 180, opacity: 0.7 }
+        boss: { x: 0, y: 0, rotate: 180, opacity: 0.7 }
     jp:
       - ice-wall#ne: [85, 45, 45]
         ice-wall#nw: [85, -45, -45]
@@ -1109,9 +1102,9 @@ graphing:
         R1: [32, 180]
         boss: { opacity: 0 }
       # turn 1
-      - boss: { pos: [60, 45], rotate: 45, opacity: 0.5 }
+      - boss: { x: 60, y: 45, rotate: 45, opacity: 0.5 }
         T2: { status: [jump] }
-      - orb#ne: { pos: [80, -135], opacity: 0 }
+      - orb#ne: { x: 80, y: -135, opacity: 0 }
         shock#sw: { scale: 1 }
       - boss: [65, 180, 15]
         pyre#s: { scale: 0.6 }
@@ -1130,11 +1123,11 @@ graphing:
         T2: [85, 0]
         M2: [32, 170]
       # turn 2
-      - boss: { pos: [60, -45], rotate: -45, opacity: 0.5 }
+      - boss: { x: 60, y: -45, rotate: -45, opacity: 0.5 }
         R1: { status: [jump] }
         icemeld#n: { scale: 0 }
         pyre#s: { scale: 0 }
-      - orb#nw: { pos: [80, 135], opacity: 0 }
+      - orb#nw: { x: 80, y: 135, opacity: 0 }
         shock#se: { scale: 1 }
         icemeld#n: { opacity: 0.8 }
         pyre#s: { opacity: 0.5 }
@@ -1158,9 +1151,9 @@ graphing:
         T2: [32, 10]
         M2: [32, 0]
       # turn 3
-      - boss: { pos: [60, -135], rotate: -135, opacity: 0.5 }
+      - boss: { x: 60, y: -135, rotate: -135, opacity: 0.5 }
         T1: { status: [jump] }
-      - orb#sw: { pos: [80, 45], opacity: 0 }
+      - orb#sw: { x: 80, y: 45, opacity: 0 }
         shock#ne: { scale: 1 }
       - boss: [65, 0, -165]
         pyre#n: { scale: 0.6 }
@@ -1182,10 +1175,10 @@ graphing:
         T2: [32, 10]
         M2: [32, 0]
       # turn 4
-      - boss: { pos: [60, 135], rotate: 135, opacity: 0.5 }
+      - boss: { x: 60, y: 135, rotate: 135, opacity: 0.5 }
         icemeld#s: { scale: 0 }
         pyre#n: { scale: 0 }
-      - orb#se: { pos: [80, -45], opacity: 0 }
+      - orb#se: { x: 80, y: -45, opacity: 0 }
         shock#nw: { scale: 1 }
         icemeld#s: { opacity: 0.8 }
         pyre#n: { opacity: 0.5 }
@@ -1199,7 +1192,7 @@ graphing:
       - tower#nw: { opacity: 0 }
         icemeld#s: { opacity: 0 }
         pyre#n: { opacity: 0 }
-        boss: { pos: [0, 0], rotate: 180, opacity: 0.7 }
+        boss: { x: 0, y: 0, rotate: 180, opacity: 0.7 }
     lc2-nenw:
       - T1: [50, 0]
         T2: [50, 180]
